--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.35.3",
+    "intl": "^1.2.5",
+    "netlify-cli": "^10.3.1",
     "next": "12.1.6",
+    "ntl": "^5.1.0",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
